Fix text alignment on error flash (#5)

--- a/src/sass/components/_flash.scss
+++ b/src/sass/components/_flash.scss
@@ -32,6 +32,7 @@
   border-color: $border;
   background-color: $background;
   color: $color;
+  text-align: left;
 
   @if $icon == "true" {
     $icon: $fa-var-check;
